# ecommerce-project

./: .gitignore  README.md  main.py  pyproject.toml
dags/: ecommerce_dag.py
dbt_ecommerce/models/marts/: dim_customer.sql  dim_products.sql  fct_sales.sql  schema.yml
dbt_ecommerce/models/staging/: schema.yml  stg_cancelamentos.sql  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
scripts/: generate_fake_data.py  generate_report.py
